<resources>
    <string name="app_name">Just Java</string>
    <string name="_10_Dollar">$10</string>
    <string name="order">Order</string>
    <string name="price">Price</string>
    <string name="minusSign">-</string>
    <string name="_Num_2">2</string>
    <string name="plusSign">+</string>
    <string name="quantity">Quantity</string>
    <string name="chocolate">Chocolate</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="toppings">Toppings</string>
    <string name="name">Name</string>
    <string name="thank_you">Thank you!</string>
    <string name="total">Total</string>
</resources>
