<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kawnayeen.justjava.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/et_customer_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textMultiLine"
            android:paddingBottom="8dp"
            android:textSize="18sp" />

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/toppings" />

        <CheckBox
            android:id="@+id/whipped_cream_topping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/whipped_cream"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/chocolate_topping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/chocolate"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/quantity" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <Button
                android:id="@+id/increment"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="@string/plusSign"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="1dp"
                android:text="@string/_Num_2"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/decrement"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="@string/minusSign"
                android:textSize="24sp" />

        </LinearLayout>

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/price" />

        <TextView
            android:id="@+id/price_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/_10_Dollar"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/order_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/order"
            android:textAllCaps="true" />
    </LinearLayout>
</ScrollView>